--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -1,9 +1,10 @@
-#### OOOO 업무 (ex. 구매, 입고 ...)
-`subTitle`
-  - CINE 데이터 수집과 모델 추론을 위한 서비스 개발
-    - 유저 관리 기능 개발
-    - DICOM 파일 업로드 및 환자 정보 추출 기능 개발
-    - 환자 정보 관리 기능 개발
+#### 구매 업무
+  - 기안검토 및 승인
+  - 발주 
+  - 창고 입고 제품 전산 처리 및 확인
+  - 출고지시서 작성 및 전산처리
+  - 매입계산서, 매출계산서 처리 및 전표 처리
+  - 재고 수불 관리
    
 #### 응급프로 백엔드 개발
 `[IPM]Chat-AIDE for Pro`
