--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -5,14 +5,9 @@
   - 출고지시서 작성 및 전산처리
   - 매입계산서, 매출계산서 처리 및 전표 처리
   - 재고 수불 관리
-   
-#### 응급프로 백엔드 개발
-`[IPM]Chat-AIDE for Pro`
-  - 구글 플레이스토어, 앱스토어 앱 출시 완료.
-  - 음성 인식 기반 KTAS 분류 시스템 구현
-    - 음성 인식 STT API 개발
-    - KTAS 분류 기능 API 개발
-  - 중증응급질환 이송 가능 병원 추천 시스템
-    - NEMC 응급실 연계 API 개발 
-      - 응급실 병상 정보 API 연결
-      - 현 위치 가까운 응급실 추천 API 개발 (Naver Maps Directions5 API 활용)
+
+#### 수출입 무역 사무 업무
+  - 수입 IT 제품 발주, 결제관리
+  - 각종 서류 작성 및 관리
+  - 수출통관 서류 업무
+  - 매입계산서 처리 및 월마감
